--- a/frontend/src/components/overview/bills/BillRow.scss
+++ b/frontend/src/components/overview/bills/BillRow.scss
@@ -1,5 +1,5 @@
 .overviewBillsRow {
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   background-color: colors.$beige-100;
   padding: 20px 16px;
   display: flex;
