--- a/frontend/src/components/overview/pots/PotsSummary.scss
+++ b/frontend/src/components/overview/pots/PotsSummary.scss
@@ -1,5 +1,5 @@
 .overviewPotsSummary {
-  border-radius: 12px;
+  border-radius: spaces.$radiusMS;
   background-color: colors.$beige-100;
   padding: 16px;
   display: grid;
