--- a/frontend/src/components/HeaderBar.scss
+++ b/frontend/src/components/HeaderBar.scss
@@ -5,7 +5,7 @@
 
 .headerBarButton {
   border: 0;
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   background-color: colors.$grey-900;
   padding: 16px;
   font-weight: 600;
@@ -18,7 +18,7 @@
   outline: none;
 }
 .headerBarButton:focus-visible{
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   box-shadow: 0 0 0 2px colors.$grey-900;
   border-color: colors.$grey-900;
   background-color: colors.$beige-500;
