--- a/frontend/src/components/overlay/OverlayContentAddNewBudget.scss
+++ b/frontend/src/components/overlay/OverlayContentAddNewBudget.scss
@@ -1,6 +1,7 @@
 @use '../../styles/colors';
 @use '../../styles/fonts';
 @use '../../styles/functions';
+@use '../../styles/spaces';
 
 .overlayContentAddNewBudget {
   display: flex;
@@ -8,14 +9,9 @@
 }
 
 .fieldTitle {
-  margin-bottom: 8px;
+  margin-bottom: spaces.$spaceS;
   display: block;
   color: var(colors.$grey-500);
 
   @include fonts.text-preset-4-bold;
 }
-
-
-
-
-
