--- a/frontend/src/components/overlay/OverlayDropdownIcon.scss
+++ b/frontend/src/components/overlay/OverlayDropdownIcon.scss
@@ -1,5 +1,7 @@
+@use '../../styles/functions';
+
 .dropdownColorIcon {
   top: calc(50% - 3px);
-  right: 21px;
+  right: functions.to-rem(21px);
   position: absolute;
 }
