--- a/frontend/src/components/overlay/dropdownCategory/DropdownCategoryListItem.scss
+++ b/frontend/src/components/overlay/dropdownCategory/DropdownCategoryListItem.scss
@@ -1,20 +1,28 @@
+@use '../../../styles/colors';
+@use '../../../styles/fonts';
+@use '../../../styles/functions';
+@use '../../../styles/spaces';
+
 .dropdownCategoryListItem {
-  border-radius: 8px;
-  padding: 13px 22px 11px;
+  border-radius: spaces.$radiusS;
+  padding: functions.to-rem(13px) functions.to-rem(22px) functions.to-rem(11px);
   width: 100%;
   display: flex;
   align-items: center;
-  font-size: 14px;
   cursor: pointer;
-}
-.dropdownCategoryListItem:hover, .dropdownCategoryListItem:focus {
-  background-color: colors.$component-background-light;
-  color: colors.$white-0;
-  outline: none;
-}
-.dropdownCategoryListItem.disabled {
-  opacity: 0.4;
-  pointer-events: none;
+
+  @include fonts.text-preset-4;
+
+  &.disabled {
+    opacity: 0.4;
+    pointer-events: none;
+  }
+
+  &:hover, &:focus {
+    background-color: colors.$component-background-light;
+    color: colors.$white-0;
+    outline: none;
+  }
 }
 
 .dropdownCategoryListItemContainer.disabled {
