--- a/frontend/src/components/overlay/dropdownCategory/OverlayDropdownCategory.scss
+++ b/frontend/src/components/overlay/dropdownCategory/OverlayDropdownCategory.scss
@@ -1,14 +1,18 @@
+@use '../../../styles/colors';
+@use '../../../styles/functions';
+@use '../../../styles/spaces';
+
 .dropdownCategoryContainer {
   position: relative;
 }
 
 .dropdownCategoryList {
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   box-shadow: 0 5px 40px -25px colors.$grey-900;
   background-color: colors.$white-0;
   display: flex;
   flex-direction: column;
-  max-height: 40px;
+  max-height: functions.to-rem(40px);
   width: calc(100% + 2px);
   top: -1px;
   left: -1px;
@@ -19,8 +23,9 @@
   overflow: hidden;
   transition: max-height 0.1s ease, visibility 0.1s ease;
 }
+
 .dropdownCategoryList.isOpen {
-  max-height: 460px;
+  max-height: functions.to-rem(460px);
   visibility: visible;
 }
 
@@ -30,9 +35,10 @@
 }
 
 .dropdownCategoryListLine {
-  margin: 0 20px;
+  margin: 0 spaces.$spaceML;
   width: calc(100% - 40px);
-}
-.dropdownCategoryListLine.disabled {
-   cursor: not-allowed;
+
+  &.disabled {
+    cursor: not-allowed;
+  }
 }
