--- a/frontend/src/components/overview/ValueBox.scss
+++ b/frontend/src/components/overview/ValueBox.scss
@@ -7,7 +7,7 @@
 }
 
 .valueBoxBorder {
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   height: 100%;
   width: 4px;
 }
@@ -81,7 +81,7 @@
   font-weight: 300;
   color: colors.$grey-500;
 
-  @include mixins.phone() {
+  @include screens.phone {
     font-size: 12px;
   }
 }
@@ -91,7 +91,7 @@
   font-size: 14px;
   font-weight: 700;
 
-  @include mixins.phone() {
+  @include screens.phone {
     font-size: 12px;
   }
 }
