--- a/frontend/src/components/overview/transactions/OverviewTransactions.scss
+++ b/frontend/src/components/overview/transactions/OverviewTransactions.scss
@@ -1,14 +1,14 @@
 @use '../../../styles/screens';
 
 .overviewTransactions {
-  border-radius: 12px;
+  border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
   padding: 32px;
   display: grid;
   grid-template-rows: auto auto;
   row-gap: 32px;
 
-  @include mixins.phone(){
+  @include screens.phone{
     padding: 24px 20px;
   }
 }
