--- a/frontend/src/components/pots/PotCard.scss
+++ b/frontend/src/components/pots/PotCard.scss
@@ -1,20 +1,20 @@
 @use '../../styles/screens';
 
 .potCard {
-  border-radius: 12px;
+  border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
   padding: 24px;
   display: flex;
   flex-direction: column;
 
-  @include mixins.phone() {
+  @include screens.phone {
     padding: 16px;
     min-width: 0;
   }
 }
 
 .potCardContent {
-  border-radius: 12px;
+  border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
   display: flex;
   flex-direction: column;
