--- a/frontend/src/components/pots/PotCardDetails.scss
+++ b/frontend/src/components/pots/PotCardDetails.scss
@@ -20,7 +20,7 @@
   font-size: 32px;
   font-weight: 600;
 
-  @include mixins.phone() {
+  @include screens.phone {
     font-size: 24px;
   }
 }
@@ -32,7 +32,7 @@
 }
 
 .potCardBarCurrent {
-  border-radius: 4px;
+  border-radius: spaces.$radiusXS;
   background-color: colors.$green;
   height: 8px;
   width: var(--barCurrentWidthPercent);
@@ -58,7 +58,7 @@
 
 .potCardBarMax {
   margin: 16px 0;
-  border-radius: 4px;
+  border-radius: spaces.$radiusXS;
   background-color: colors.$beige-100;
   height: 8px;
   position: relative;
