--- a/frontend/src/components/pots/PotPageGrid.scss
+++ b/frontend/src/components/pots/PotPageGrid.scss
@@ -6,7 +6,7 @@
   column-gap: 24px;
   row-gap: 24px;
 
-  @include mixins.phone() {
+  @include screens.phone {
     grid-template-columns: repeat(auto-fit, (minmax(270px, 1fr)));
   }
 }
