--- a/frontend/src/components/searchbar/SearchbarDropdownSort.scss
+++ b/frontend/src/components/searchbar/SearchbarDropdownSort.scss
@@ -1,7 +1,7 @@
 @use '../../styles/screens';
 
 .searchbarDropdownSort {
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   border: 1px solid colors.$beige-500;
   padding: 12px 40px 12px 16px;
   color: colors.$grey-900;
@@ -14,7 +14,7 @@
           background-color 0.3s ease,
           box-shadow 0.3s ease;
 
-  @include mixins.phone() {
+  @include screens.phone {
     margin-left: 8px;
     border: 1px solid transparent;
     padding: 12px;
@@ -31,7 +31,7 @@
   color: colors.$white-0;
   cursor: pointer;
 
-  @include mixins.phone() {
+  @include screens.phone {
     color: transparent;
   }
 }
@@ -41,7 +41,7 @@
 
 
 .searchbarDropdownSort option{
-  @include mixins.phone() {
+  @include screens.phone {
     color: colors.$grey-900;
   }
 }
@@ -57,7 +57,7 @@
   pointer-events: none;
   filter: var(--icon-filter);
 
-  @include mixins.phone() {
+  @include screens.phone {
     height: 20px;
     top: calc(50% - 10px);
     right: 10px;
@@ -80,7 +80,7 @@
     filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(300%) contrast(100%);
   }
 
-  @include mixins.phone() {
+  @include screens.phone {
     .searchbarDropdownSort {
       color: transparent;
     }
