--- a/frontend/src/components/sidebar/SidebarMinimize.scss
+++ b/frontend/src/components/sidebar/SidebarMinimize.scss
@@ -2,7 +2,7 @@
 
 .sidebarMinimizeWrapper {
   border: 2px solid colors.$grey-900;
-  @include mixins.tablet-and-down() {
+  @include screens.tablet-and-down {
     display: none;
     width: 300px;
   }
