--- a/frontend/src/components/transactions/pagination/PaginationPages.scss
+++ b/frontend/src/components/transactions/pagination/PaginationPages.scss
@@ -8,7 +8,7 @@
 }
 
 .paginationPagesButton {
-  border-radius: 8px;
+  border-radius: spaces.$radiusS;
   border: 1px solid colors.$beige-500;
   background-color: colors.$white-0;
   padding: 12px 16px 10px 16px;
