--- a/frontend/src/pages/BillsPage.scss
+++ b/frontend/src/pages/BillsPage.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   row-gap: 32px;
 
-  @include mixins.phone() {
+  @include screens.phone {
     padding: 24px 16px;
   }
 }
@@ -35,7 +35,7 @@
     column-gap: 24px;
   }
 
-  @include mixins.phone() {
+  @include screens.phone {
     display: flex;
     flex-direction: column;
   }
