--- a/frontend/src/pages/OverviewPage.scss
+++ b/frontend/src/pages/OverviewPage.scss
@@ -4,7 +4,7 @@
   padding: 32px 40px;
   width: 100%;
 
-  @include mixins.phone(){
+  @include screens.phone{
     padding: 24px 16px;
   }
 }
@@ -15,7 +15,7 @@
   column-gap: 24px;
   row-gap: 24px;
 
-  @include mixins.tablet-and-down() {
+  @include screens.tablet-and-down {
     grid-template-columns: 1fr;
   }
 }
