--- a/frontend/src/pages/PotsPage.scss
+++ b/frontend/src/pages/PotsPage.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   row-gap: 32px;
 
-  @include mixins.phone() {
+  @include screens.phone {
     padding: 24px 16px;
   }
 }
