--- a/frontend/src/pages/TransactionsPage.scss
+++ b/frontend/src/pages/TransactionsPage.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   row-gap: 24px;
 
-  @include mixins.phone() {
+  @include screens.phone {
     padding: 24px 16px;
   }
 }
