--- a/frontend/src/components/overview/budgets/OverviewBudgets.scss
+++ b/frontend/src/components/overview/budgets/OverviewBudgets.scss
@@ -1,25 +1,27 @@
+@use '../../../styles/colors';
 @use '../../../styles/screens';
+@use '../../../styles/spaces';
 
 .overviewBudgets {
   border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
-  padding: 32px;
+  padding: spaces.$spaceXL;
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
+  row-gap: spaces.$spaceML;
 
-  @include screens.phone{
-    padding: 24px 20px;
+  @include screens.phone {
+    padding: spaces.$spaceL spaces.$spaceML;
   }
 }
 
 .overviewBudgetsContent {
-  padding: 8px 0;
+  padding: spaces.$spaceS 0;
   display: grid;
   grid-template-columns: auto fit-content(100%);
-  column-gap: 16px;
+  column-gap: spaces.$spaceM;
 
-  @include screens.phone{
+  @include screens.phone {
     grid-template-columns: 1fr;
   }
 }
@@ -27,10 +29,10 @@
 .overviewBudgetsValues {
   display: flex;
   flex-direction: column;
-  row-gap: 16px;
+  row-gap: spaces.$spaceM;
 
-  @include screens.phone{
-    margin-top: 16px;
+  @include screens.phone {
+    margin-top: spaces.$spaceM;
     display: grid;
     flex-direction: column;
     grid-template-columns: 1fr 1fr;
