--- a/frontend/src/components/overview/pots/OverviewPots.scss
+++ b/frontend/src/components/overview/pots/OverviewPots.scss
@@ -1,37 +1,39 @@
+@use '../../../styles/colors';
 @use '../../../styles/screens';
+@use '../../../styles/spaces';
 
 .overviewPots {
   border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
-  padding: 32px;
+  padding: spaces.$spaceXL;
   display: grid;
   grid-template-rows: auto auto;
-  row-gap: 20px;
+  row-gap: spaces.$spaceML;
 
   @include screens.phone {
-    padding: 24px 20px;
+    padding: spaces.$spaceL spaces.$spaceML;
   }
 }
 
 .overviewPotsContent {
   display: grid;
   grid-template-columns: 45% 55%;
-  column-gap: 20px;
+  column-gap: spaces.$spaceML;
 
   @include screens.phone {
     grid-template-columns: 1fr;
-    row-gap: 20px;
+    row-gap: spaces.$spaceML;
   }
 }
 
 .overviewPotsValues {
   display: grid;
-  grid-template-rows: repeat(2,1fr);
-  row-gap: 16px;
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: spaces.$spaceM;
 }
 
 .overviewPotsValuesRow {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-  row-gap: 16px;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: spaces.$spaceM;
 }
